# ore-no-fusen

./: .cursorrules  .eslintrc.path-comparison.json  AG_RULES.md  DEBUGGING_PROTOCOL.md  LOG_PRIVACY.md  README.md  components.json  diagnosis_v1.4.md  diagnosis_v1.5.md  gen_icon.ps1  next.config.mjs  package-lock.json  package.json  playwright.config.ts  settings_debug_log.txt  strict_test_log.txt  tailwind.config.js.bak  test_log.txt  test_output.txt  test_results_2.txt  test_results_4.txt  tmp_new_pointer_up.txt  vitest.config.ts  俺のロードマップΔ0.1.md
app/: RegisterPWA.tsx  globals.css  layout.tsx  newly-created.css  page.tsx  shadcn.css  俺の付箋_フロントマター仕様.md  俺の付箋_構造改革設計Δ0.5.md  俺の付箋_要求仕様_v1.1.md  俺の付箋_要求仕様_v1.3.md  俺の付箋_要求仕様_v1.4.md  俺の付箋_要求仕様_v1.7.md  俺の付箋_要求仕様_v1.8.md  俺の付箋_要求仕様_v1.9.md  俺の付箋_要求仕様Δ0.2.md  俺の付箋_要求仕様Δ0.7_20260110.md
e2e/: mock-tauri.ts  release.spec.ts  sticky-note.spec.ts  sticky-note_range.spec.ts
lib/: LanguageContext.tsx  i18n.test.ts  i18n.ts  settings-store.test.ts  settings-store.ts  tray-actions.test.ts  tray-actions.ts
public/: manifest.json  manifest.webmanifest  sw.js  sw.js.map
src-tauri/: Cargo.toml  check_err.txt  check_final.txt  check_log.txt  check_out.txt  check_output.txt  check_tests_log.txt  check_v2.txt  tauri.conf.json  test_results.txt  test_results_rust.txt
src-tauri/capabilities/: default.json
src-tauri/coverage/: tarpaulin-report.html
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  clipboard.rs  import.rs  lib.rs  logger.rs  logic.rs  logic_test_temp.rs  settings.rs  sound.rs  state.rs  storage.rs  tray.rs
(+45 files in other folders)
